--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,38 @@
+<h1><%= @post.title %></h1>
+<p><%= @post.content %></p>
+<p><% @post.categories.each do |cat| %>
+    Category: <%= cat.name %>
+<% end %></p>
 
+<p>Add Comment:</p>
+<p><%= form_for @post.comments.build do |f| %>
+    <%= f.hidden_field :post_id, :value => @post.id %>
+
+    <%= f.label :username %>
+    <%= f.collection_select :user_id, User.all, :id, :username %>
+    <br />
+    <%= f.fields_for :user, User.new do |u| %>
+        <%= u.label :username %>
+        <%= u.text_field :username %>
+    <% end %>
+    <br />
+
+    <%= f.label :content %>
+    <%= f.text_area :content %>
+    <br />
+    
+
+    <%= f.submit %>
+<% end %></p>
+
+
+
+<p>All Comments:</p>
+<ul>
+<%= @post.comments.each do |comment| %>
+    <li><%= comment.user.username if comment.user %>
+    says: 
+    <%= comment.content if comment.user %>
+    </li>
+<% end %>
+</ul>
