--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -8,6 +8,7 @@
     <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
 
     <%= f.fields_for :categories, @post.categories.build do |cat| %>
+        <%= cat.label :name %>
         <%= cat.text_field :name %>
     <% end %>
 
@@ -15,3 +16,4 @@
 <% end %>
 
 # look up how to include blank selections / look at lab clues
+#object, method, collection, value_method, text_method, options = {}, html_options = {}
