--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -32,7 +32,15 @@
 <%= @post.comments.each do |comment| %>
     <li><%= comment.user.username if comment.user %>
     says: 
-    <%= comment.content if comment.user %>
+    <%= comment.content %>
     </li>
+<% end %>
+</ul>
+<p>Commentors:</p>
+<ul>
+<% @post.users.distinct.each do |user| %>
+  <li>
+    <%= link_to user.username, user_path(user) %>
+  </li>
 <% end %>
 </ul>
